@@ -38,7 +38,7 @@ class HelmInitContainerIT extends AbstractHelmChartIT {
             assertThat(statefulSet).isNotNull();
             final var template = statefulSet.getSpec().getTemplate();
             assertThat(template.getSpec().getVolumes()).isNotEmpty().map(Volume::getName).contains(mountName);
-            final var containerVolumeMounts = template.getSpec().getContainers().get(0).getVolumeMounts();
+            final var containerVolumeMounts = template.getSpec().getContainers().getFirst().getVolumeMounts();
             assertThat(containerVolumeMounts).isNotEmpty().map(VolumeMount::getName).contains(mountName);
 
             await().untilAsserted(() -> assertThat(client.pods()
