@@ -141,7 +141,7 @@ class HelmPlatformMutualTlsIT extends AbstractHelmChartIT {
                 .findFirst();
         assertThat(tlsVolume).isPresent();
 
-        final var container = statefulSet.getSpec().getTemplate().getSpec().getContainers().get(0);
+        final var container = statefulSet.getSpec().getTemplate().getSpec().getContainers().getFirst();
         assertThat(container).isNotNull();
 
         final var volumeMount = container.getVolumeMounts()
